--- a/styles/common.css
+++ b/styles/common.css
@@ -1,3 +1,17 @@
+/* common.css 모든 웹페이지 공통 css == common */
+/* common.css == header, footer 공통영역 Design */
+/* Firefox */
+html {scrollbar-width: 10px;;scrollbar-color: #222 #f1f1f1;}
+/* Opera */
+html::-o-scrollbar {width: 10px;}/*스크롤바 크기*/
+html::-o-scrollbar-thumb {background-color: #222;border-radius: 5px;}/*스크롤 드래그바*/
+html::-o-scrollbar-thumb:hover {background-color: #555;}
+/* Chrome, Safari, Edge 등 웹킷 기반 브라우저 */
+::-webkit-scrollbar {width: 20px;}/*스크롤바 크기*/
+::-webkit-scrollbar-track {box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);}/*스크롤바 배경*/
+::-webkit-scrollbar-thumb {background-color: #222;border-radius: 5px;}/*스크롤 드래그바*/
+::-webkit-scrollbar-thumb:hover {background-color: #f00;}
+/* header */
 header {
     background: aqua;
     width:calc(100% - 60px); height:100px;
@@ -27,7 +41,7 @@ header .right #searchFrm {
     background-color: #B8BDEC;
     margin-right: 20px;
 }
-header .right #searcgFrm fieldset {
+header .right #searchFrm fieldset {
     display: flex; height:42px;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -38,11 +52,11 @@ header .right #searchFrm fieldset #searchTxt {
     color: #fff;
     padding-left: 10px;
 }
-header .right #searcgFrm fieldset #txt::placeholder {color:#fff;}
-header .right #searcgFrm fieldset #searchBtn {
+header .right #searchFrm fieldset #searchTxt::placeholder {color:#fff;}
+header .right #searchFrm fieldset #searchBtn {
     background: none;
     width: 24px; height:24px; margin-right: 10px;}
-header .right #searcgFrm fieldset #searchBtn img {width: 100%;}
+header .right #searchFrm fieldset #searchBtn img {width: 100%;}
 header .right #login, header .right #cart, header .right #nav {width:30px; height:33px; margin-right: 20px;}
 header .right #login {}
 header .right #login img {width: 100%;}
@@ -50,3 +64,65 @@ header .right #cart {}
 header .right #cart img {width: 100%;}
 header .right #nav {margin-right: 0px;}
 header .right #nav img {width: 100%;}
+/* open-nav */
+header #open_nav {
+    position:fixed; left:0; top:0; z-index:999;
+    width:100%; height:100vh;
+    background: #f1f1f1;
+    display: flex;
+    flex-flow: column nowrap;
+    overflow-y: auto;
+    /* 웹 브라우저 y축 기준으로 내용이 넘칠 경우 스크롤을 표시하고
+    넘치지 않는다면 스크롤을 숨긴다. */
+    
+    
+}
+header #open_nav #nav_close {
+    width:40px; height:40px;
+    position: absolute;
+    top:111px; right:107px;
+    
+    
+}
+header #open_nav #nav-close img {
+    width:100%;
+    
+}
+/* swiper-slide nav-adver */
+header #open_nav #nav_adver {
+    max-width:712px; text-align: center;
+    margin-top: 47px; font-size: 20px;
+}
+
+header #open_nav #nav_adver .swiper-slide a {line-height: 24px;}
+header #open_nav #nav_adver .swiper-button-prev,
+header #open_nav #nav_adver .swiper-button-next {top:20px; width:24px;height:24px;}
+header #open_nav #nav_adver .swiper-button-prev {
+    background: url(../images/adver_prev.png);
+}
+header #open_nav #nav_adver .swiper-button-next {
+    background: url(../images/adver_next.png);
+}
+header #open_nav #nav_adver .swiper-button-prev::after,
+header #open_nav #nav_adver .swiper-button-next::after {display:none;}
+
+
+/* open-nav nav */
+header #open_nav nav {
+    display: flex; 
+    flex-flow: column nowrap;
+    text-align: center;
+    font-size: 50.5rem;
+    padding-top: 91px;
+    
+}
+header #open_nav nav a {
+    font-size: 3.15rem;
+    font-weight: 700;
+    line-height: 100px;
+    
+}
+header #open_nav nav a:hover {
+    color:#B8BDEC; border-bottom: 1px solid #B8BDEC;
+    
+}
