--- a/styles/common.css
+++ b/styles/common.css
@@ -10,10 +10,10 @@ html::-o-scrollbar-thumb:hover {background-color: #555;}
 ::-webkit-scrollbar {width: 20px;}/*스크롤바 크기*/
 ::-webkit-scrollbar-track {box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);}/*스크롤바 배경*/
 ::-webkit-scrollbar-thumb {background-color: #222;border-radius: 5px;}/*스크롤 드래그바*/
-::-webkit-scrollbar-thumb:hover {background-color: #f00;}
+::-webkit-scrollbar-thumb:hover {background-color: #aaa;}
 /* header */
 header {
-    background: aqua;
+    
     width:calc(100% - 60px); height:100px;
     margin: 0 auto;
     display: flex;
@@ -120,7 +120,7 @@ header #open_nav nav a {
     font-size: 3.15rem;
     font-weight: 700;
     line-height: 100px;
-    
+    transition: all 0.5s;
 }
 header #open_nav nav a:hover {
     color:#B8BDEC; border-bottom: 1px solid #B8BDEC;
