--- a/styles/login.css
+++ b/styles/login.css
@@ -90,5 +90,6 @@ main .login #login_box > p {
     font-size: 1.33rem;
     border-top: 1px solid#c5c5c5;
     padding-top: 20px;
+    margin-bottom: 200px;
 }
-main .login #login_box > p a {font-size: 1.33rem;}
+main .login #login_box > p a {font-size: 1.33rem;margin-bottom: 200px;}
