--- a/styles/product.css
+++ b/styles/product.css
@@ -1,11 +1,50 @@
-main {    
+main {}
+/* 1. swiper-slide */
+main #product_slide {}
+main #product_slide .swiper-wrapper {}
+main #product_slide .swiper-wrapper .swiper-slide {
+    /* 공통 slide 1~6 */
+    width:700px; height:740px; 
+    position: relative;
+    
 }
+
+main #product_slide .swiper-wrapper .swiper-slide .txt {
+    position: absolute; left:65px; bottom: 53px;
+    color: #fff;
+    /* 초기 숨기기 (이후 swiper 활용 서서히 나타나고 사라지기 기능 추가) */
+    opacity:0; transition:all 2s; transform: translateX(50px);
+}
+main #product_slide .swiper-wrapper .swiper-slide .txt dt {
+    font-size: 3.125rem; letter-spacing: -0.02rem;
+    line-height: 65px;
+}
+main #product_slide .swiper-wrapper .swiper-slide .txt dt em {
+    font-weight: 700; font-size: 3.125rem; letter-spacing: -0.02rem;
+}
+main #product_slide .swiper-wrapper .swiper-slide .txt dd {
+    font-size: 1.875rem; margin-top: 40px;
+}
+main #product_slide .swiper-wrapper .slide1 {background-image: url(../images/model/model_07.jpg);}
+main #product_slide .swiper-wrapper .slide2 {background-image: url(../images/model/model_05.jpg);}
+main #product_slide .swiper-wrapper .slide3 {background-image: url(../images/model/model_04.jpg);}
+main #product_slide .swiper-wrapper .slide4 {background-image: url(../images/model/model_06.jpg);}
+main #product_slide .swiper-wrapper .slide5 {background-image: url(../images/model/model_03.jpg);}
+main #product_slide .swiper-wrapper .slide6 {background-image: url(../images/model/model_02.jpg);}
+/* swiper-scrollbar design */
+main #product_slide .swiper-scrollbar {  /* 스크롤배경(크기,위치O) */
+    /* 포지션 앱솔루트 값이 기본적으로 내장되어 있으므로 왼쪽 오른쪽 위 아래 맞춰주면 된다. */
+    left:50%; bottom:20px; width:500px; transform: translateX(-50%);
+    background: #fff;
+}    
+main #product_slide .swiper-scrollbar-drag {background:#000;} /* 스크롤 막대(크기X) */
 /* 2. category */
 main #category {
     width:1350px; margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 100px;
 }
 main #category a {
     width:170px;
